<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_confirm_buddy"
                android:id="@+id/textView8" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="81dp"
                android:layout_height="108dp"
                android:id="@+id/list_item_thumbnail"
                android:src="@drawable/boy"
                android:layout_marginLeft="61dp"
                android:layout_marginStart="61dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="38dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/friend_name_1"
                android:id="@+id/textView9"
                android:layout_marginLeft="41dp"
                android:layout_marginStart="41dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/list_item_thumbnail"
                android:layout_toEndOf="@+id/list_item_thumbnail"
                android:paddingTop="50dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_confirm_at"
                android:id="@+id/textView10"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/textClock"
                android:layout_toStartOf="@+id/textClock"
                android:paddingRight="15dp" />

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textClock"
                android:textSize="65sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_confirm_note"
                android:id="@+id/textView12"
                android:paddingLeft="30dp"
                android:paddingTop="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_confirm_confirm"
                android:id="@+id/btn_confirm_alarm"
                android:gravity="bottom|center_vertical|center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>