<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".StatusActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="70dp"
        android:layout_below="@id/toolbar">
        <!--tools:showIn="@layout/activity_login">-->


        <ImageView
            android:id="@+id/boy_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:src="@drawable/boy" />

        <TextView
            android:id="@+id/boy_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/boy_img"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/name_boy" />

        <TextView
            android:id="@+id/boy_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/boy_name"
            android:layout_toRightOf="@+id/boy_img"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/status_boy" />


        <ImageView
            android:id="@+id/girl_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/boy_img"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:src="@drawable/girl" />

        <TextView
            android:id="@+id/girl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/girl_img"
            android:layout_toRightOf="@+id/girl_img"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/name_girl" />

        <TextView
            android:id="@+id/girl_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/girl_name"
            android:layout_toRightOf="@+id/girl_img"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/status_girl" />

        <Button
            android:id="@+id/btn_turn_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="Turn off alarm"
            android:onClick="goHome"/>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
